src/objects/News__c.object
<CustomObject>
    <fields>
        <fullName>Archive_DateTime__c</fullName>
        <label>Archive DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <label>GroupId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkId__c</fullName>
        <label>NetworkId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Private news item - can only be viewed by Group members</description>
        <inlineHelpText>Check to limit viewing this item to group members only</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_DateTime__c</fullName>
        <label>Publish DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Show_Author__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Author</label>
        <type>Checkbox</type>
    </fields>
    <label>7S News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Author__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Publish_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S News</pluralLabel>
    <recordTypes>
        <fullName>Blogs</fullName>
        <active>true</active>
        <label>Blogs</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <label>News</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>